--- a/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation.md
@@ -109,15 +109,13 @@ A utilização de validação externa com Guardrails é especialmente recomendad
 
 **intro**
 
-Decoding estruturado guiado por gramática, conhecido como grammar-constrained decoding (GCD), é uma técnica que modifica o mecanismo interno de geração dos modelos de linguagem (LLMs) para garantir que o output segue regras sintáticas pré-definidas[2305.13971]. Ao contrário do texto livre, cada token é gerado de modo a não quebrar a estrutura formal (por exemplo, de JSON, SQL, linguagens específicas de domínio), bloqueando sequências inválidas à medida que são construídas. Nos últimos anos, GCD tem sido promovido como alternativa à validação pós-processamento ou fine-tuning quando o formato do resultado é crítico.[nexastack+4](https://www.nexastack.ai/blog/structured-decoding-with-vllm)​
+Decoding estruturado guiado por gramática, conhecido como grammar-constrained decoding (GCD), é uma técnica que modifica o mecanismo interno de geração dos modelos de linguagem (LLMs) para garantir que o output segue regras sintáticas pré-definidas[2305.13971]. ​
 
 ---
 
 ## Pontos Fortes
 
-- ==**Garantia estrutural**. GCD oferece uma garantia formal de que o output está sempre conforme uma gramática definida (JSON válido, código compilável, árvore sintática correta)[2305.13971].== Isto elimina a necessidade de pós-processar ou corrigir erros que podem tornar outputs inutilizáveis.[aidancooper+3](https://www.aidancooper.co.uk/constrained-decoding/)​
-    
-- **Adaptação rápida sem re-treino**. Uma das principais vantagens é poder adaptar modelos pré-treinados para novas estruturas apenas mudando a gramática, sem treinar o modelo, reduzindo custos, tempo e dependência de grandes datasets. Na literatura recente, frameworks como vLLM e Outlines mostram que esta abordagem funciona para múltiplos formatos e aplicações.[leewayhertz+3](https://www.leewayhertz.com/structured-outputs-in-llms/)​
+- ==**Garantia estrutural**. GCD oferece uma garantia formal de que o output está sempre conforme uma gramática definida (JSON válido, código compilável, árvore sintática correta)[2305.13971].== ​​
     
 - ==**Generalidade e flexibilidade**. O artigo [2305.13971] argumenta que gramáticas formais podem descrever o espaço de output para uma vasta gama de tarefas[2305.13971].==
     
@@ -127,14 +125,13 @@ Decoding estruturado guiado por gramática, conhecido como grammar-constrained d
 
 ## Limitações
 
-- ==**Sintaxe ≠ Semântica**. GCD garante estrutura, não significado; podes ter outputs formalmente corretos e semanticamente irrelevantes, inconsistentes ou até perigosos[2305.13971].==​
+- ==**Sintaxe ≠ Semântica**. GCD garante estrutura, não significado; podes ter outputs formalmente corretos e semanticamente irrelevantes, inconsistentes ou até perigosos[2305.13971].[aclanthology+3](https://aclanthology.org/2025.acl-srw.59.pdf)==​
     
-- ==**Cobertura e generalização escassa**. Os estudos frequentemente demonstram sucesso apenas em algumas tarefas (parsing, geração de código, templates médicos); extrapolar para "todas as tarefas estruturadas" continua sem suporte forte na literatura universal[2305.13971]==.[pmc.ncbi.nlm.nih](https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/)​
+- ==**Cobertura e generalização escassa**. Os estudos frequentemente demonstram sucesso apenas em algumas tarefas (parsing, geração de código, templates médicos); extrapolar para "todas as tarefas estruturadas" continua sem suporte forte na literatura universal[2305.13971]==.​
     
-- ==**Incompatível com APIs comerciais**. O artigo e vários relatos práticos frisam que GCD geralmente não pode ser usado com modelos de cloud/API como GPT-4 ou Claude, porque não é possível controlar as escolhas internas de decoding[2305.13971].==[agenta+1](https://agenta.ai/blog/the-guide-to-structured-outputs-and-function-calling-with-llms)​
+- ==**Incompatível com APIs comerciais**. O artigo e vários relatos práticos frisam que GCD geralmente não pode ser usado com modelos de cloud/API como GPT-4 ou Claude, porque não é possível controlar as escolhas internas de decoding[2305.13971].==​
     
-- ==**Overhead e latência dependentes da gramática**. A introdução de parsing e masking pode aumentar tempo de resposta substancialmente em gramáticas complexas ou tarefas de alta escalabilidade==, limitando uso em produção real-time[2305.13971].[aclanthology+3](https://aclanthology.org/2025.acl-long.551.pdf)​
-    
+- ==**Overhead e latência dependentes da gramática**. A introdução de parsing e masking pode aumentar tempo de resposta substancialmente em gramáticas complexas ou tarefas de alta escalabilidade[2305.13971]==.
 
 ---
 
@@ -142,29 +139,25 @@ Decoding estruturado guiado por gramática, conhecido como grammar-constrained d
 
 **Quando usar GCD**:
 
-- ==Tarefas em que garantir o formato do output é mais importante do que tratar significado (ficheiros estruturados, templates fixos, parsing, geração de código)[2305.13971]==.[nexastack+1](https://www.nexastack.ai/blog/structured-decoding-with-vllm)​
+- ==Tarefas em que garantir o formato do output é mais importante do que tratar significado (ficheiros estruturados, templates fixos, parsing, geração de código)[2305.13971]==.​
     
-- Prototipagem rápida ou ambientes low-resource, onde fine-tuning é caro, difícil ou impossível[2305.13971].[agenta+1](https://agenta.ai/blog/the-guide-to-structured-outputs-and-function-calling-with-llms)​
-    
-- Workflows locais com pleno controlo sobre o modelo, integração flexível entre diferentes estruturas e necessidades.[aidancooper+2](https://www.aidancooper.co.uk/constrained-decoding/)​
+- ==Prototipagem rápida ou ambientes low-resource, onde fine-tuning é caro, difícil ou impossível[2305.13971].​==
     
 
 **Quando evitar ou complementar GCD**:
 
-- Contextos dependentes de APIs comerciais, sem acesso ao processo de decoding interno[2305.13971].[agenta+1](https://agenta.ai/blog/the-guide-to-structured-outputs-and-function-calling-with-llms)​
+- ==Contextos dependentes de APIs comerciais, sem acesso ao processo de decoding interno[2305.13971].​==
     
-- Tarefas que exigem compreensão semântica ou dependências contextuais difíceis de formalizar gramaticalmente[2305.13971].[aclanthology+3](https://aclanthology.org/2025.acl-srw.59.pdf)​
+- ==Tarefas que exigem compreensão semântica ou dependências contextuais difíceis de formalizar gramaticalmente[2305.13971].[aclanthology+3](https://aclanthology.org/2025.acl-srw.59.pdf)==​
     
-- Grandes sistemas distribuídos ou aplicações real-time, onde overhead pode ser crítico.[openreview+3](https://openreview.net/forum?id=L6CYAzpO1k)​
-    
-- Casos onde modelos fine-tuned oferecem desempenho e robustez superiores, especialmente em outputs com múltiplos níveis de dependência lógica.[proceedings.neurips+2](https://proceedings.neurips.cc/paper_files/paper/2024/file/2bdc2267c3d7d01523e2e17ac0a754f3-Paper-Conference.pdf)​
+- ==Grandes sistemas distribuídos ou aplicações real-time, onde overhead pode ser crítico.[openreview+3](https://openreview.net/forum?id=L6CYAzpO1k)==​
     
 
 ---
 
 **Considerações Críticas**
 
-A literatura realça o potencial de GCD para expandir a aplicabilidade dos LLMs em tarefas estruturadas e reduzir barreiras de entrada associadas ao fine-tuning, mas alerta que a garantia estrutural não é sinónimo de adequação universal. Devem ser ponderados os trade-offs e limitações reais, integrando GCD como solução parcial, nunca como substituto total de outras técnicas — e sempre fundamentando empiricamente a adoção para o teu cenário específico[2305.13971].[aidancooper+3](https://www.aidancooper.co.uk/constrained-decoding/)​
+A literatura realça o potencial de GCD para expandir a aplicabilidade dos LLMs em tarefas estruturadas e reduzir barreiras de entrada associadas ao fine-tuning, mas alerta que a garantia estrutural não é sinónimo de adequação universal. Devem ser ponderados os trade-offs e limitações reais, integrando GCD como solução parcial, nunca como substituto total de outras técnicas — e sempre fundamentando empiricamente a adoção para o teu cenário específico[2305.13971].​
 
 1. [https://www.nexastack.ai/blog/structured-decoding-with-vllm](https://www.nexastack.ai/blog/structured-decoding-with-vllm)
 2. [https://www.aidancooper.co.uk/constrained-decoding/](https://www.aidancooper.co.uk/constrained-decoding/)
