new sections added

--- a/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation structure.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation structure.md
@@ -1,6 +1,6 @@
 [[State of art]]
 # **2. Abordagens Tecnológicas**
-
+# ==rever e estruturar melhor==
 A etapa de **Geração de JSON** no _pipeline_ **NL→Dash** corresponde ao momento em que o sistema converte intenções em **configurações estruturadas e executáveis**, alinhadas com o _schema_ do motor de dashboards. A fiabilidade desta fase depende de mecanismos que assegurem **fidelidade sintática**, **validação semântica** e **baixa latência**, de modo a permitir a interação em tempo real entre o utilizador e o sistema de análise.  
 As subseções seguintes apresentam o **estado da arte das abordagens tecnológicas** que sustentam essa geração estruturada, organizadas em três eixos evolutivos: _function calling nativo_, _validação externa com JSON Schema_ e _decoding estruturado_.
 
